<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutVerticalPrincipal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroupIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButtonDollarIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Dollar" />

                <RadioButton
                    android:id="@+id/radioButtonPesoIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_col" />

                <RadioButton
                    android:id="@+id/radioButtonEuroIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/euro" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/Select_divisa"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_value"
                    android:inputType="number" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroupOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButtonPesoOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_col" />

                <RadioButton
                    android:id="@+id/radioButtonEuroOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/euro" />

                <RadioButton
                    android:id="@+id/radioButtonDollarOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Dollar" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:editable="false"
                    android:text="@string/Destino_divisa"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewNumberOut"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:editable="true"
                    android:ems="10"
                    android:hint="@string/result"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonConversion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:text="@string/conversion"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageViewFondo"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_weight="1"
        android:contentDescription="@string/money"
        app:srcCompat="@drawable/money" />

</LinearLayout>